@@ -1,0 +1,2 @@
+require 'advanced_errors/full_messages'
+ActiveRecord::Errors.send :include, Nexx::AdvancedErrors::FullMessages
